proxmox/cert-manager/ingress.yaml
# ingress ingress-nginx.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingressClassName: traefik
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  rules:
  - host: wte.sh # Change by your domain
    http:
      paths:
      - backend:
          service:
            name: nginx
            port: 
              number: 80
        path: /
        pathType: Prefix  
  tls:
  - hosts:
    - wte.sh # Change by your domain
    secretName: test-certmanager
